--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuerceljs",
+  "name": "vuercejs",
   "version": "1.0.0",
   "scripts": {
     "dev": "nuxt",
@@ -11,7 +11,7 @@
     "@nuxtjs/axios": "5.12.1",
     "@zeit-ui/themes": "1.0.0",
     "@zeit-ui/vue": "2.5.0-canary.3",
-    "bulma": "0.8.1",
+    "bulma": "0.9.0",
     "node-sass": "4.14.1",
     "nuxt": "2.14.1",
     "nuxt-webfontloader": "1.1.0",
@@ -19,6 +19,15 @@
     "pug-plain-loader": "1.0.0",
     "reqlim": "0.0.0"
   },
-  "keywords": [],
-  "description": ""
+  "keywords": [
+    "nuxt.js",
+    "dark",
+    "minimalist",
+    "vuercel",
+    "vue.js",
+    "zeit-ui",
+    "example",
+    "boilerplate"
+  ],
+  "description": "A simple minimalist example portfolio using @zeit-ui's design system"
 }
