--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
-    "@nuxtjs/axios": "5.12.1",
-    "@zeit-ui/themes": "1.0.0",
-    "@zeit-ui/vue": "2.5.0-canary.3",
-    "bulma": "0.9.0",
+    "@geist-ui/vue": "3.0.0",
+    "@geist-ui/vue-icons": "1.0.2",
+    "@nuxtjs/axios": "5.12.2",
+    "bulma": "0.9.1",
     "node-sass": "4.14.1",
     "nuxt": "2.14.1",
     "nuxt-webfontloader": "1.1.0",
